WebPrintOperationGtk destructor should be virtual https://bugs.webkit.org/show_bug.cgi?id=98002

Patch by Alberto Garcia <agarcia@igalia.com> on 2012-10-01
Reviewed by Carlos Garcia Campos.

WebPrintOperationGtk is an abstract class which can be deleted
using a pointer to itself, yet its destructor is not virtual.
Fixes -Wdelete-non-virtual-dtor.

* WebProcess/WebPage/gtk/WebPrintOperationGtk.h:
(WebPrintOperationGtk):

Canonical link: https://commits.webkit.org/116030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130028 268f45cc-cd09-0410-ab3c-d52691b4dbfc